--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@
 <body>
     <div class="header">
         <div class="header-content">
-	    <img src="images/spoga.png" alt="spoga">
             <img src="images/LOGO PNG.png" alt="GLOBAL BASE SOURCING LIMITED">
             
             <!-- Add more images as needed -->
@@ -154,8 +153,8 @@
                     <td>Dia 18.5cm x Height 15.5cm</td>
                 </tr>
                 <tr>
-                    <th>Product CBM</th>
-                    <td>0.00</td>
+                    <th>MOQ</th>
+                    <td>10176</td>
                 </tr>
                 <tr>
                     <th>Product Weight</th>
@@ -163,7 +162,7 @@
                 </tr>
                 <tr>
                     <th>Unit</th>
-                    <td>pcs</td>
+                    <td>Pcs</td>
                 </tr>
                 <tr>
                     <th>Carton Size</th>
@@ -178,20 +177,20 @@
                     <td>0.080</td>
                 </tr>
                 <tr>
-                    <th>20 Ft Container Carton Quantity</th>
-                    <td>349 Carton</td>
+                    <th>20 Ft Container Quantity</th>
+                    <td>4188 </td>
                 </tr>
                 <tr>
-                    <th>40 Ft Container Carton Quantity</th>
-                    <td>748 Carton</td>
+                    <th>40 Ft Container Quantity</th>
+                    <td>8976 </td>
                 </tr>
                 <tr>
-                    <th>40 HQ Container Carton Quantity</th>
-                    <td>848 Carton</td>
+                    <th>40 HQ Container Quantity</th>
+                    <td>10176 </td>
                 </tr>
                 <tr>
                     <th>Price</th>
-                    <td><button class="link-button" id="myBtn">Show Price</button></td>
+                    <td>USD 3.50</td>
                 </tr>
                 <tr>
                     <th>FOB Port</th>
@@ -199,7 +198,7 @@
                 </tr>
                 <tr>
                     <th>More Details - Packaging PPT</th>
-                    <td><button class="link-button" onclick="window.location.href='Link';"> </button></td>
+                    <td>Bulk Packed, Base Label</button></td>
                 </tr>
             </table>
         </div>
