--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     <td>Qinzhou, China</td>
                 </tr>
                 <tr>
-                    <th>More Details - Packaging PPT</th>
+                    <th>Other Details - Packaging PPT</th>
                     <td>Bulk Packed, Base Label</button></td>
                 </tr>
             </table>
